assets/css/style.css
:root {
    --primary-color: #1c8591;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    color: #1c8591;
    font-family: Arial, Helvetica, sans-serif;
    background-color: rgb(229, 232, 238);
}

header {
    padding: 20px 35px;
    background-color: #0a2527;
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
}

header h1 {
    font-weight: bold;
    font-size: 36px;
    color: var(--primary-color);
    margin: 0;
}

header nav {
    margin: 7px 0;
}

header nav ul {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
    list-style: none;
}

header nav ul li a {
    margin: 0 30px;
      font-weight: lighter;
      font-size: 1.3vw;
      color: var(--primary-color);
      text-decoration: none;
      border-bottom: 2px solid;
      padding-bottom: 2px;
}

section {
    padding :10px;
}

.hero{
    height: 400px;
    background-image: url("../images/download\ \(1\).jpg");
    background-size: cover;
    background-position: center;
    display: flex;
    justify-content: flex-end;
    flex-wrap: wrap;
    position: relative;
}

.image2 {
    position: absolute;
    top: 150px;
    left: 30px;
    border: 3px var(--primary-color) solid;
    height: 150px;
    width: 150px;
}

.hero h2 {
    font-style: italic;
    font-size: 20px;
    color: var(--primary-color);
    margin-top: 300px;
    background-color:rgb(229, 232, 238);
}

.about {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    margin: 20px 50px;
    width: 90%;
    align-items: center;
}

.flex-row {
    display: flex;
    justify-content: left;
}

.section-title {
    font-size: 35px;
    color: #024e76;
    margin: 0 0 0 80px;
    width: 50%;
}

.step-info {
    flex :2 20%;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
}

.vl-border1 {
    border-right: 3px solid #39a6b2;
    height: 150px;
    flex: 2 1%;
  }

  .step-text {
    flex: 25;
  }

  .step-text p {
    color: var(--primary-color);
    font-size: 15px;
    text-align: left;
    line-height: 1.3;
    margin-left: 30px;
    width: 100%;
  }

  .vl-border2{
    border-right: 3px solid #39a6b2;
    height: 450px;
    flex: 2 5%;   
  }

  .container{
    flex:80;
  }

  .container {
    display: flex;  
    justify-content: space-between;
    align-items: center; 
    margin-left: 15px;
    width: 80%;
  }

  

